# XAU1

XAU1/: README.md  main.py  pyproject.toml  requirements.txt
XAU1/scripts/: fetch_data.py  run_optimization.py  start_paper_trading.py
XAU1/src/xau1/: __init__.py
XAU1/src/xau1/backtest/: __init__.py  backtester.py  reporter.py
XAU1/src/xau1/config/: backtest_params.yaml  optimized_strategy_params.yaml  strategy_params.yaml
XAU1/src/xau1/dashboard/: app.py  charts.py  metrics.py  paper_trading_app.py
XAU1/src/xau1/engine/: __init__.py  indicators.py  strategy.py
XAU1/src/xau1/exchange/: __init__.py  binance.py
XAU1/src/xau1/optimize/: parameter_search.py  validator.py
XAU1/src/xau1/paper_trading/: binance_connector.py  live_signals.py  main.py  paper_trader.py  risk_manager.py
XAU1/src/xau1/reports/: optimization_report.py
XAU1/src/xau1/utils/: common.py  data.py  helpers.py
